# manager

server/: app.py  pyproject.toml
server/templates/: index.html
