[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jeremy Chamoux <jchamoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
boto3 = "^1.34.118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
